--- a/jessie/Dockerfile
+++ b/jessie/Dockerfile
@@ -37,6 +37,7 @@ RUN useradd -m -s /bin/bash jenkins
 RUN echo jenkins:jenkins | chpasswd
 RUN adduser jenkins docker
 RUN echo "jenkins ALL=(root) NOPASSWD: ALL" > /etc/sudoers.d/jenkins
+RUN chmod 440 /etc/sudoers.d/jenkins
 RUN mkdir -p /var/run/sshd
 
 EXPOSE 22
