jessie: add qemu-kvm

--- a/jessie/Dockerfile
+++ b/jessie/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Philippe Pepiot <phil@philpep.org>
 RUN apt-get -qqy update && apt-get -y install \
     apt-transport-https ca-certificates curl lxc iptables \
     openjdk-7-jre-headless sudo ssh locales \
-    whois pwgen \
+    whois pwgen qemu-kvm \
     build-essential fontconfig git libevent-dev \
     libfreetype6-dev libjpeg-dev libpng-dev libsmbclient-dev libssl-dev \
     libxml2-dev libxslt1-dev lsb-release pdftk pkg-config redis-server rsync \
@@ -52,7 +52,8 @@ RUN useradd -m -s /bin/bash jenkins && \
     mkdir -p /home/jenkins/.pip && \
     chown jenkins:jenkins /home/jenkins/.pip
 RUN echo jenkins:jenkins | chpasswd
-RUN adduser jenkins docker
+RUN adduser jenkins docker && \
+    adduser jenkins kvm
 RUN echo "jenkins ALL=(root) NOPASSWD: ALL" > /etc/sudoers.d/jenkins
 RUN chmod 440 /etc/sudoers.d/jenkins
 
