jessie: Remove vagrant .deb after install

--- a/jessie/Dockerfile
+++ b/jessie/Dockerfile
@@ -45,6 +45,7 @@ RUN service postgresql start && \
 # Vagrant
 ADD https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.4_x86_64.deb /tmp/
 RUN dpkg -i /tmp/vagrant_1.7.4_x86_64.deb
+RUN rm /tmp/vagrant_1.7.4_x86_64.deb
 
 # Jenkins user
 RUN useradd -m -s /bin/bash jenkins && \
